added version to ingress
Signed-off-by: Thomas Schuetz <thomas.schuetz@dynatrace.com>

--- a/config/ingress.yaml
+++ b/config/ingress.yaml
@@ -11,6 +11,7 @@ spec:
   source:
     chart: ingress-nginx 
     repoURL: https://kubernetes.github.io/ingress-nginx 
+    targetRevision: 4.1.0
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
