--- a/config/cert-manager-cert.yaml
+++ b/config/cert-manager-cert.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: argo-cd-cert
+  namespace: argocd
 spec:
   secretName: argocd-secret
   issuerRef:
