--- a/config/cert-manager-issuer.yaml
+++ b/config/cert-manager-issuer.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
 metadata:
   name: argo-cd-issuer
+  namespace: argocd
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
