--- a/config/argocd-cm.yaml
+++ b/config/argocd-cm.yaml
@@ -18,7 +18,7 @@ data:
           clientID: 3055e7340724510c4c10
           clientSecret: $argocd-github-secret:dex.github.clientSecret 
           orgs:
-          - name: keptn
+          - name: ca-on-ca 
 
   resource.customizations: |
     argoproj.io/Application:
