added first app
Signed-off-by: Thomas Schuetz <thomas.schuetz@dynatrace.com>

--- a/app/podtato-dev.yaml
+++ b/app/podtato-dev.yaml
@@ -18,7 +18,7 @@ spec:
     server: https://34.134.64.60
   project: thschue
   source:
-    path: app
+    path: chart 
     repoURL: https://github.com/thschue/argo-demo-install
     targetRevision: HEAD
     helm:
