updated hat part
Signed-off-by: Thomas Schuetz <thomas.schuetz@dynatrace.com>

--- a/app/podtato-dev.yaml
+++ b/app/podtato-dev.yaml
@@ -21,6 +21,10 @@ spec:
     chart: podtato-head
     repoURL: https://thschue.github.io/podtato-head
     targetRevision: 0.1.1-dev-main.202205051903 
+    helm:
+      parameters:
+      - name: hat.partNumber
+        value: "02"
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
