added keptn user
Signed-off-by: Thomas Schuetz <thomas.schuetz@dynatrace.com>

--- a/config/argo-rbac-cm.yaml
+++ b/config/argo-rbac-cm.yaml
@@ -4,6 +4,8 @@ metadata:
   name: argocd-rbac-cm
   namespace: argocd
 data:
+  accounts.keptn: apiKey
   policy.default: role:readonly
   policy.csv: |
     g, ca-on-ca:argo-admins, role:admin
+    g, keptn, role:admin
