--- a/config/argocd-cm.yaml
+++ b/config/argocd-cm.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
 data:
+  accounts.keptn: apiKey
   url: https://argo.research.dev.dynatracelabs.com
 
   dex.config: |
