--- a/app/podtato-dev.yaml
+++ b/app/podtato-dev.yaml
@@ -6,13 +6,13 @@ metadata:
   annotations:
     notifications.argoproj.io/subscribe.on-out-of-sync-status.keptn: ""
     notifications.argoproj.io/subscribe.on-deployed.keptn: ""
+    link.argocd.argoproj.io/external-link: http://35.239.155.8
   finalizers:
   - resources-finalizer.argocd.argoproj.io
   labels:
     stage: dev
     keptnService: podtatohead
     keptnProject: demo
-    publicURI: http://35.239.155.8
 spec:
   destination:
     namespace: "podtatohead-dev"
