--- a/config/argo-notifications-cm.yaml
+++ b/config/argo-notifications-cm.yaml
@@ -24,11 +24,6 @@ data:
                 "appname": "{{.app.metadata.name}}",
                 "argocd": "https://argo.research.dev.dynatracelabs.com/applications/{{.app.metadata.name}}"
               },
-              "deployment": {
-                  "deploymentURIsPublic": [
-                  "{{.app.metadata.labels.publicURI}}"
-               ]
-              },
               "project": "{{.app.metadata.labels.keptnProject}}",
               "service": "{{.app.metadata.labels.keptnService}}",
               "stage": "{{.app.metadata.labels.stage}}"
@@ -49,6 +44,11 @@ data:
               "labels": {
                 "version": "{{.app.status.sync.revision}}",
                 "appname": "{{.app.metadata.name}}"
+              },
+              "deployment": {
+                  "deploymentURIsPublic": [
+                     "{{.app.metadata.annotations.\"link.argocd.argoproj.io/external-link\"}}"
+               ]
               },
               "project": "{{.app.metadata.labels.keptnProject}}",
               "service": "{{.app.metadata.labels.keptnService}}",
