--- a/config/argo-notifications-cm.yaml
+++ b/config/argo-notifications-cm.yaml
@@ -47,7 +47,7 @@ data:
               },
               "deployment": {
                   "deploymentURIsPublic": [
-                     "{{.app.metadata.annotations.\"link.argocd.argoproj.io/external-link\"}}"
+                     "{{.app.metadata.annotations.externalURI}}"
                ]
               },
               "project": "{{.app.metadata.labels.keptnProject}}",
