--- a/config/argo-notifications-cm.yaml
+++ b/config/argo-notifications-cm.yaml
@@ -44,6 +44,7 @@ data:
               "labels": {
                 "version": "{{.app.status.sync.revision}}",
                 "appname": "{{.app.metadata.name}}"
+                "link": "{{.app.metadata.annotations.externalURI}}"
               },
               "deployment": {
                   "deploymentURIsPublic": [
