--- a/config/argo-notifications-cm.yaml
+++ b/config/argo-notifications-cm.yaml
@@ -22,7 +22,9 @@ data:
               "labels": {
                 "version": "{{.app.status.sync.revision}}",
                 "appname": "{{.app.metadata.name}}",
+                "link": "{{.app.metadata.annotations.externalURI}}",
                 "argocd": "https://argo.research.dev.dynatracelabs.com/applications/{{.app.metadata.name}}"
+                "buildId": "{{.app.status.sync.revision}}"
               },
               "project": "{{.app.metadata.labels.keptnProject}}",
               "service": "{{.app.metadata.labels.keptnService}}",
@@ -45,7 +47,8 @@ data:
                 "version": "{{.app.status.sync.revision}}",
                 "appname": "{{.app.metadata.name}}",
                 "link": "{{.app.metadata.annotations.externalURI}}",
-                "argocd": "https://argo.research.dev.dynatracelabs.com/applications/{{.app.metadata.name}}"
+                "argocd": "https://argo.research.dev.dynatracelabs.com/applications/{{.app.metadata.name}}",
+                "buildId": "{{.app.status.sync.revision}}"
               },
               "deployment": {
                   "deploymentURIsPublic": [
