--- a/config/argo-notifications-cm.yaml
+++ b/config/argo-notifications-cm.yaml
@@ -23,7 +23,7 @@ data:
                 "version": "{{.app.status.sync.revision}}",
                 "appname": "{{.app.metadata.name}}",
                 "link": "{{.app.metadata.annotations.externalURI}}",
-                "argocd": "https://argo.research.dev.dynatracelabs.com/applications/{{.app.metadata.name}}"
+                "argocd": "https://argo.research.dev.dynatracelabs.com/applications/{{.app.metadata.name}}",
                 "buildId": "{{.app.status.sync.revision}}"
               },
               "project": "{{.app.metadata.labels.keptnProject}}",
