changed keptn project
Signed-off-by: Thomas Schuetz <thomas.schuetz@dynatrace.com>

--- a/app/podtato-dev.yaml
+++ b/app/podtato-dev.yaml
@@ -13,7 +13,7 @@ metadata:
   labels:
     stage: dev
     keptnService: podtatohead
-    keptnProject: demo
+    keptnProject: argo-demo
 spec:
   destination:
     namespace: "podtatohead-dev"
