--- a/app/podtato-dev.yaml
+++ b/app/podtato-dev.yaml
@@ -7,7 +7,7 @@ metadata:
     notifications.argoproj.io/subscribe.on-out-of-sync-status.keptn: ""
     notifications.argoproj.io/subscribe.on-deployed.keptn: ""
     link.argocd.argoproj.io/external-link: https://demo.research.dev.dynatracelabs.com/bridge/project/argo-demo/sequence
-    externalURI: https://35.188.108.82
+    externalURI: http://35.188.108.82
   finalizers:
   - resources-finalizer.argocd.argoproj.io
   labels:
